--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
   <div class="col">
     <div class="row">
-      <button>
+      <button (click)="ejecutar()">
         Compilar
       </button>
       <button>
@@ -17,7 +17,7 @@
       </button>
     </div>
     <div class="row">
-      <textarea class="area"></textarea>
+      <textarea class="area" ng-model="entrada"></textarea>
     </div>
     <div class="row">
       <!-- Terminal -->
