--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,24 +4,29 @@
     src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpngriver.com%2Fwp-content%2Fuploads%2F2017%2F12%2Fdownload-lion-PNG-transparent-images-transparent-backgrounds-PNGRIVER-COM-lion-clipart-transparent-background-16.png&f=1&nofb=1" />
   <span>Organizacion de Lenguajes y Compiladores 2</span>
 </div>
-
+<!-- Body -->
 <div class="content" role="main">
   <div class="container-fluid">
     <!-- Botones de Accion -->
     <div class="row">
       <div class="col-md-12">
         <button (click)="ejecutar()" type="button" class="btn btn-dark">
+          <fa-icon [icon]="faCoffee"></fa-icon>
           Compilar
         </button>
+        &nbsp;
         <button type="button" class="btn btn-dark">
+          <fa-icon [icon]="faPencilRuler"></fa-icon>
           Graficar
         </button>
+        &nbsp;
         <button type="button" class="btn btn-dark">
+          <fa-icon [icon]="faGlobe"></fa-icon>
           Traducir
         </button>
       </div>
     </div>
-    <!-- Cuerpo -->
+    <!-- Editores -->
     <div class="row">
       <div class="col-md-6">
         <div class="terminal">
@@ -36,7 +41,7 @@
         <div class="terminal">
           <ngx-codemirror disabled [(ngModel)]="salida" [options]="{
               lineNumbers: false,
-              theme: 'material'
+              theme: 'dracula'
             }"></ngx-codemirror>
         </div>
       </div>
