added plotter class

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
           Compilar
         </button>
         &nbsp;
-        <button type="button" class="btn btn-dark">
+        <button (click)="printAst()" type="button" class="btn btn-dark">
           <fa-icon [icon]="faPencilRuler"></fa-icon>
           Graficar
         </button>
