--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,11 +30,11 @@
               <fa-icon [icon]="faPencilRuler"></fa-icon>
               Graficar
             </button>
-            <button (click)="printAst()" type="button" class="dropdown-item">
+            <button (click)="tokenTable()" type="button" class="dropdown-item">
               <fa-icon [icon]="faLanguage"></fa-icon>
               Tabla de Simbolos
             </button>
-            <button (click)="printAst()" type="button" class="dropdown-item">
+            <button (click)="errorTable()" type="button" class="dropdown-item">
               <fa-icon [icon]="faEraser"></fa-icon>
               Tabla de Errores
             </button>
