--- a/src/app/Components/ast/ast.component.html
+++ b/src/app/Components/ast/ast.component.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h1 class="title">
-                    Abstract Syntax Tree
+                    Abstract Syntax Tree <br> ( Linea, Columna ) Tipo
                 </h1>
             </div>
         </div>
