--- a/src/app/Components/editor/editor.component.css
+++ b/src/app/Components/editor/editor.component.css
@@ -19,13 +19,17 @@
     flex-direction: column;
 }
 
+body {
+    background-color: black;
+}
+
 .terminal {
     position: relative;
     border-radius: 6px;
     padding-top: 45px;
     margin-top: 8px;
     overflow: hidden;
-    background-color: rgb(59, 59, 61);
+    background-color: rgb(8, 101, 104);
 }
 
 .terminal::before {
@@ -34,7 +38,7 @@
     top: 0;
     left: 0;
     height: 10px;
-    background: rgb(58, 58, 58);
+    background: rgb(8, 101, 104);
     color: #c2c3c4;
     width: 100%;
     font-size: 2rem;
