--- a/src/app/Components/toolbar/toolbar.component.css
+++ b/src/app/Components/toolbar/toolbar.component.css
@@ -6,7 +6,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    background-color: black;
+    background-color: rgb(8, 101, 104);
     color: white;
     font-weight: 600;
 }
