--- a/src/app/Components/toolbar/toolbar.component.html
+++ b/src/app/Components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
     <img width="40" alt="Angular Logo"
-        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpngriver.com%2Fwp-content%2Fuploads%2F2017%2F12%2Fdownload-lion-PNG-transparent-images-transparent-backgrounds-PNGRIVER-COM-lion-clipart-transparent-background-16.png&f=1&nofb=1" />
+        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2Foriginals%2F18%2Fe9%2F84%2F18e98488f4463e3114d7059324ec382c.png&f=1&nofb=1" />
     <span>Organizacion de Lenguajes y Compiladores 2</span>
 </div>
