--- a/src/app/Components/editor/editor.component.css
+++ b/src/app/Components/editor/editor.component.css
@@ -53,3 +53,13 @@ body {
     padding: 0 1rem 1rem;
     margin: 0;
 }
+
+.my-custom-scrollbar {
+    position: relative;
+    height: 200px;
+    overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+    display: block;
+}
