agregada traduccion de operadores logicos

--- a/src/app/Components/editor/editor.component.html
+++ b/src/app/Components/editor/editor.component.html
@@ -15,7 +15,7 @@
                 </button>
                 &nbsp;
                 <button (click)="translate()"  type="button" class="btn btn-dark" style="background-color: rgb(8, 101, 104)">
-                    <fa-icon [icon]="faGlobe"></fa-icon>
+                    <fa-icon [icon]="faSpinner"></fa-icon>
                     Optimizar
                 </button>
                 &nbsp;
