agregado optimizador de codigo intermedio

--- a/src/app/Components/editor/editor.component.html
+++ b/src/app/Components/editor/editor.component.html
@@ -14,7 +14,7 @@
                     Traducir
                 </button>
                 &nbsp;
-                <button (click)="translate()"  type="button" class="btn btn-dark" style="background-color: rgb(8, 101, 104)">
+                <button (click)="optimizar()"  type="button" class="btn btn-dark" style="background-color: rgb(8, 101, 104)">
                     <fa-icon [icon]="faSpinner"></fa-icon>
                     Optimizar
                 </button>
