se agrega tabla de optimizacion

--- a/src/app/Components/editor/editor.component.html
+++ b/src/app/Components/editor/editor.component.html
@@ -37,6 +37,10 @@
                             <fa-icon [icon]="faEraser"></fa-icon>
                             Tabla de Errores
                         </button>
+                        <button (click)="optTable()" type="button" class="dropdown-item">
+                            <fa-icon [icon]="faSpinner"></fa-icon>
+                            Tabla de Optimizacion
+                        </button>
                     </div>
                 </div>
             </div>
